# flask-short-snippets

./: .gitignore  README.rst
flask-scratchpad/: pyproject.toml  requirements.txt
flask-scratchpad/flask_crud/: app.py
flask-scratchpad/flask_crud/templates/: base.html  index.html  posts.html
flask-scratchpad/learn_flask/: test.db
