[tool.poetry]
name = "flask-tutorial"
version = "0.1.0"
description = ""
authors = ["Corfucinas <corfucinas@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-sqlalchemy = "^2.4.3"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.782"
wemake-python-styleguide = "^0.14.0"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
